style.css
:root {
  --color1: #5f00ba;
  --color2: #a09be7;
  --color3: #fbfbfb;
  --color4: #2e2532;
  --color5: #201a23;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

/* Utility */

.center {
  margin: 0 auto;
}

.block {
  display: block;
}

.bold {
  font-weight: 600;
}

/* Body Style */

body {
  background: radial-gradient(var(--color4), var(--color5));
  color: var(--color3);
  font-family: Verdana, sans-serif;
  width: 100vw;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Main Style */

main {
  background-color: var(--color1);
  padding: 3rem;
  margin: 0 2rem;
  max-width: 500px;
  height: 400px;
  text-align: center;
  display: grid;
  grid-template-rows: repeat(1fr, 5);
  border-radius: 5%;
  box-shadow: 0 0 20px var(--color1);
}

/* Input Style */

.user-input {
  width: 200px;
  height: 30px;
  outline: none;
  padding: 2px 10px;
  font-size: 1.2rem;
  background-color: var(--color3);
  color: var(--color5);
  border-radius: 10px;
  box-shadow: 0 0 20px var(--color2);
  transition: all 0.4s;
}

.button {
  width: 115px;
  height: 30px;
  font-size: 1.2rem;
  background-color: var(--color2);
  color: var(--color5);
  border-radius: 10px;
  cursor: pointer;
  user-select: none;
}

/* Animations */

.user-input:focus {
  transform: scale(1.05);
  font-weight: 500;
}

